# CTracker

./: .geminirules  .gitignore  CLAUDE.md  QUICK_START.md  README.md  Run_CTracker.bat  SUCCESS.md  VERIFICATION_GUIDE.md  build_and_run.ps1  deploy-qt-dlls.ps1  improvements.md  launch-ctracker.ps1  test-build.ps1  test-build.sh
.ai/: onboarding.md
.ai/docs/: Doucmantation  README.md  code-reference.md  phase-0-explained.md  system-overview.html
.ai/skills/engineer/: SKILL.md
.ai/specs/: design.md  requirements.md  tasks.md
.ai/steering/: Engineer.md
.claude/: settings.local.json
CTracker/: .gitignore  BUGFIXES.md  BUILD_AND_TEST.md  CMakeLists.txt  PHASE9_CHECKLIST.md  PHASE9_COMPLETE.md  TESTING_GUIDE.md  run-tests.ps1  test_simple.cpp
CTracker/assets/styles/: dark-industrial.qss
CTracker/include/: ActivityLogModel.h  AnalyticsView.h  CircularProgressBar.h  ContributionHeatmap.h  CourseDetailView.h  DataImporter.h  DataStructures.h  DatabaseManager.h  EntityDetailView.h  HomeDashboard.h  MainWindow.h  ProjectDetailView.h  SettingsView.h  SideNavigationBar.h  UnitExpandableWidget.h
CTracker/include/analytics/: ActivityLogModel.h  AnalyticsSummary.h  AnalyticsView.h  HeatmapAggregator.h
CTracker/include/calendar/: CalendarWidget.h  DayDetailsPanel.h
CTracker/include/core/: DataExporter.h  DataStructures.h  DatabaseManager.h
CTracker/include/courses/: CourseDetailView.h  CoursesFilterBar.h  CoursesView.h  EntityCard.h  EntityDetailView.h  SessionTaskRow.h  UnitCard.h  UnitSessionsView.h
CTracker/include/pomodoro/: PomodoroTimerWidget.h  PomodoroView.h
CTracker/include/projects/: ProjectCard.h  ProjectDetailView.h  ProjectsFilterBar.h  ProjectsView.h  TaskBoardCard.h  TaskDetailDialog.h  TasksBoardWidget.h
CTracker/include/settings/: SettingsView.h
CTracker/include/shared/: CategoryModel.h  CategoryPill.h  CircularProgressBar.h  EmptyState.h  EntityCreateDialog.h  HomeDashboard.h  MainWindow.h  SideNavigationBar.h  StatsCard.h
CTracker/include/todos/: TodoModel.h  TodoRow.h  TodoView.h
CTracker/resources/: app_icon.rc  resources.qrc
CTracker/src/: ActivityLogModel.cpp  AnalyticsView.cpp  CircularProgressBar.cpp  ContributionHeatmap.cpp  DataExporter.cpp  DataImporter.cpp  DatabaseManager.cpp  EntityCard.cpp  EntityDetailView.cpp  HomeDashboard.cpp  MainWindow.cpp  SessionTaskRow.cpp  SettingsView.cpp  SideNavigationBar.cpp  UnitExpandableWidget.cpp  main.cpp  main_test.cpp
CTracker/src/analytics/: ActivityLogModel.cpp  AnalyticsSummary.cpp  AnalyticsView.cpp  ContributionHeatmap.cpp  HeatmapAggregator.cpp
CTracker/src/calendar/: CalendarWidget.cpp  DayDetailsPanel.cpp
CTracker/src/core/: DataExporter.cpp  DataImporter.cpp  DatabaseManager.cpp
CTracker/src/courses/: CourseDetailView.cpp  CoursesFilterBar.cpp  CoursesView.cpp  EntityCard.cpp  EntityDetailView.cpp  SessionTaskRow.cpp  UnitCard.cpp  UnitExpandableWidget.cpp  UnitSessionsView.cpp
CTracker/src/pomodoro/: PomodoroTimerWidget.cpp  PomodoroView.cpp
CTracker/src/projects/: ProjectCard.cpp  ProjectDetailView.cpp  ProjectsFilterBar.cpp  ProjectsView.cpp  TaskBoardCard.cpp  TaskDetailDialog.cpp  TasksBoardWidget.cpp
CTracker/src/settings/: SettingsView.cpp
CTracker/src/shared/: CategoryModel.cpp  CategoryPill.cpp  CircularProgressBar.cpp  EmptyState.cpp  EntityCreateDialog.cpp  HomeDashboard.cpp  MainWindow.cpp  SideNavigationBar.cpp  StatsCard.cpp
CTracker/src/todos/: TodoModel.cpp  TodoRow.cpp  TodoView.cpp
CTracker/tests/: CMakeLists.txt  README.md  test_databasemanager_v1.cpp  test_databasemanager_v2.cpp  test_models.cpp  test_widgets.cpp
Design/: DESIGN_SYSTEM.md  DESIGN_SYSTEM_COMPACT.md  README.md  SYSTEM_OVERVIEW_PROMPT.md  VISUAL_REFERENCE.md  index.html  projects-page-mockup.html
Design/src/app/: App.tsx
Design/src/app/components/: ActivityHeatmap.tsx  Badge.tsx  Button.tsx  Calendar.tsx  Card.tsx  CircularProgress.tsx  EmptyState.tsx  EntityCard.tsx  Input.tsx  Sidebar.tsx
Design/src/app/components/pages/: AnalyticsPage.tsx  CourseDetailPage.tsx  CoursesPage.tsx  HomePage.tsx  PomodoroPage.tsx  ProjectsPage.tsx  SettingsPage.tsx  TodoPage.tsx
Design/src/styles/: theme.css
data/: courses.md  courses_tracker.html  example_import.json  extract_to_json.py  generate_html.py  personal-info.md
docs/: phase-0-explained.md  phase-1-and-2-explained.md  phase-3-explained.md
